changes done in navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-    <navbar class="navbar">
+    <navbar id="navbar">
       <div class="logo">
         <h1>[STRIFT]</h1>
         <!-- <img src="IMGS/logo.png" width="100px" /> -->
